--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- custom css -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://github.com/LucasMatos-Dev-Dados/Portifolio/blob/2804eeb7b181391c1904c1c7d1e3201e1cb1f080/style.css">
 </head>
 
 <body>
