--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ Seja para criar estratégias de marketing, aumentar a visibilidade de uma marca 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <!-- custom js -->
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
